<resources>
    <string name="app_name">FacultativeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_repo">Repositories</string>
    <string name="nav_item_map">Map</string>
    <string name="nav_item_contacts">Contacts</string>
    <string name="nav_item_info">Information</string>
    <string name="nav_item_sensor">Sensor</string>
    <string name="nav_item_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github_name">Name</string>
    <string name="domain_name">Name.com</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="github_image">github_image</string>
    <string name="username">username</string>
    <string name="information_about_phone">Phone info</string>
    <string name="wifiIP">WI-FI ip: </string>
    <string name="mobileIP">Mobile ip: </string>
    <string name="model">Model: </string>
    <string name="version">Version: </string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="screenshot">screenshot</string>

    <!-- for maps -->
    <string name="not_found_error_message">Not found</string>
    <string name="remote_error_message">remote_error_message</string>
    <string name="unknown_error_message">unknown_error_message</string>
    <string name="network_error_message">network_error_message</string>
    <string name="take_photo">Take photo</string>
    <string name="save_photo">Save photo</string>
    <string name="token">token</string>
    <string name="prefs_name">prefs_name</string>
    <string name="phone_number">Phone number -</string>
    <string name="name">Name -</string>
    <string name="repositories">Repositories</string>
    <string name="contacts">Contacts</string>
</resources>
